fix(vault): fix form overflow

--- a/ui/app/global.scss
+++ b/ui/app/global.scss
@@ -66,6 +66,27 @@ input:focus {
   box-shadow: 15px 15px 30px 0 #00000014;
 }
 
+.scrollable {
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: #76a8ef #e0e0e0;
+  padding-right: 12px;
+}
+
+.scrollable::-webkit-scrollbar {
+  width: 4px;
+}
+
+.scrollable::-webkit-scrollbar-track {
+  background: #e0e0e0;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #e0e0e0;
+}
+
 section,
 .section {
   @apply max-w-6xl min-h-[48vh] mx-auto py-16;
